objects/BMCServiceDesk__BMC_BaseElement__c.object
<CustomObject>
    <description>BMC_BaseElement. CMDB Class that is the CDM common base class (at the top of the inheritance tree) for configuration item (CI) classes. Attributes of this class are inherited by all CI classes. In addition to attributes such as Name that you populate for all CIs, BMC_BaseElement also contains core attributes such as CompareActionCode, which is populated automatically by theCMDB, and CreateDate, which is populated automatically. For relationships, the CDM common base class is BMC_BaseRelationships.  This class corresponds to the DMTF class CIM_ManagedElement.</description>
    <fields>
        <fullName>BMCServiceDesk__Access_Mask__c</fullName>
        <label>Access Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AccountID__c</fullName>
        <label>AccountID</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Active_Maximum_Transmission_Unit__c</fullName>
        <label>Active Maximum Transmission Unit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ActivityType__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Interaction</fullName>
                </value>
                <value>
                    <fullName>Business Process</fullName>
                </value>
                <value>
                    <fullName>Start</fullName>
                </value>
                <value>
                    <fullName>End</fullName>
                </value>
                <value>
                    <fullName>Decision</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AddressAdditionalInfo__c</fullName>
        <label>Address Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AddressType__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>IPv4</fullName>
                </value>
                <value>
                    <fullName>IPv6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AdminPasswordStatus__c</fullName>
        <label>Admin Password Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disabled</fullName>
                </value>
                <value>
                    <fullName>Enabled</fullName>
                </value>
                <value>
                    <fullName>Not Implemented</fullName>
                    <default>true</default>
                    <label>Not Implemented</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AliasAddresses__c</fullName>
        <label>Alias Addresses</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Allocation_Units__c</fullName>
        <label>Allocation Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Altitude__c</fullName>
        <label>Altitude</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ApplicationType__c</fullName>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>StandardApplication</fullName>
                </value>
                <value>
                    <fullName>InfrastructureApplication</fullName>
                </value>
                <value>
                    <fullName>ClusteredApplication</fullName>
                </value>
                <value>
                    <fullName>CompositeApplicaiton</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Application_Infrastructure_Type__c</fullName>
        <label>Application Infrastructure Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application Server</fullName>
                </value>
                <value>
                    <fullName>SAP System</fullName>
                </value>
                <value>
                    <fullName>Siebel Enterprise</fullName>
                </value>
                <value>
                    <fullName>Database System</fullName>
                </value>
                <value>
                    <fullName>Clustered Application Server</fullName>
                </value>
                <value>
                    <fullName>Other (default)</fullName>
                    <default>true</default>
                    <label>Other (default)</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Application_Service_Type__c</fullName>
        <label>Application Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SAP Service</fullName>
                </value>
                <value>
                    <fullName>J2EE Module</fullName>
                </value>
                <value>
                    <fullName>J2EE Servlet</fullName>
                </value>
                <value>
                    <fullName>Siebel Component</fullName>
                </value>
                <value>
                    <fullName>Siebel Component Group</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AssemblyId__c</fullName>
        <inlineHelpText>This uniquely identifies the assembly associated with this CI</inlineHelpText>
        <label>Assembly ID</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Asset_Age__c</fullName>
        <description>Indicates the age of an asset by calculating the difference between the current date and the asset birth date.</description>
        <formula>ROUND((NOW() -  BMCServiceDesk__Asset_Birth_date__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates the age of an asset by calculating the difference between the current date and the asset birth date.</inlineHelpText>
        <label>Asset Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Asset_Birth_date__c</fullName>
        <description>Indicates the date when an asset&quot;s age starts being tracked. This date can be entered or automatically calculated based upon the rules defined by the Administrator. Please contact your administrator for more details.</description>
        <inlineHelpText>Indicates the date when an asset&quot;s age starts being tracked. This date can be entered or automatically calculated based upon the rules defined by the Administrator. Please contact your administrator for more details.</inlineHelpText>
        <label>Asset Birthdate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Asset_Class__c</fullName>
        <formula>If( OR( ISPICKVAL(BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__CMDBClassType__c, &apos;Asset&apos;) ,ISPICKVAL(BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__CMDBClassType__c,&apos;CI and Asset&apos;)),BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__Class__c,If( OR(ISNULL(BMCServiceDesk__FKAssetRuleClass__r.BMCServiceDesk__Class__c), ISBLANK(BMCServiceDesk__FKAssetRuleClass__r.BMCServiceDesk__Class__c)),&apos;&apos;,BMCServiceDesk__FKAssetRuleClass__r.BMCServiceDesk__Class__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Asset_Status__c</fullName>
        <label>Asset Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active - Deployed</fullName>
                </value>
                <value>
                    <fullName>Active - Rental</fullName>
                </value>
                <value>
                    <fullName>Active - Shared</fullName>
                </value>
                <value>
                    <fullName>In Stock - New Equipment</fullName>
                </value>
                <value>
                    <fullName>In Stock - Available</fullName>
                </value>
                <value>
                    <fullName>In Stock - Local Hold</fullName>
                </value>
                <value>
                    <fullName>In Stock - In Repair</fullName>
                </value>
                <value>
                    <fullName>Inactive - Damaged</fullName>
                </value>
                <value>
                    <fullName>Inactive - Disposed</fullName>
                </value>
                <value>
                    <fullName>Inactive - Legal Hold</fullName>
                </value>
                <value>
                    <fullName>Inactive - Lost</fullName>
                </value>
                <value>
                    <fullName>Inactive - Retired</fullName>
                </value>
                <value>
                    <fullName>Inactive - Stolen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AttributeDataSourceList__c</fullName>
        <label>AttributeDataSourceList</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Author__c</fullName>
        <label>Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Auto_Sense__c</fullName>
        <label>Auto Sense</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Availability__c</fullName>
        <label>Availability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AvailableCPs__c</fullName>
        <label>Available CPs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AvailableIFAs__c</fullName>
        <label>Available IFAs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AvailableIFCs__c</fullName>
        <label>Available IFCs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AvailableIFLs__c</fullName>
        <label>Available IFLs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Available_Capacity__c</fullName>
        <label>Available Capacity</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Available_Space__c</fullName>
        <label>Available Space</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AveragePagesPerMinute__c</fullName>
        <label>Average Pages Per Minute</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BMC_CMDBVersion__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CMDB Version</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BYOD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Bring Your Own Device (BYOD) policy enables employees to use their own mobile devices in the workplace. This field indicates if a mobile device is owned by an employee.</description>
        <label>BYOD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Bandwidth__c</fullName>
        <label>Bandwidth</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Base_Customer_Price__c</fullName>
        <label>Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Base_Delivery_Cost__c</fullName>
        <label>Cost</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Battery_Installed__c</fullName>
        <label>Battery Installed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Bios_Characteristics__c</fullName>
        <label>BIOS Characteristics</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Block_Size__c</fullName>
        <label>Block Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BootROMSupported__c</fullName>
        <label>Boot ROM Supported</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Bootable__c</fullName>
        <label>Bootable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BuildNumber__c</fullName>
        <label>Build Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BuildType__c</fullName>
        <label>Build Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__BusinessCategory__c</fullName>
        <label>Business Category</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CFRM_Name__c</fullName>
        <label>CFRM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CFRM_Site_Name__c</fullName>
        <label>CFRM Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CITag__c</fullName>
        <inlineHelpText>Use this field to enter the tag number of the physical entity represented by the instance.</inlineHelpText>
        <label>Asset #</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CI_Status__c</fullName>
        <label>CI Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CMDBRowLevelSecurity__c</fullName>
        <label>CMDBRowLevelSecurity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CMDBWriteSecurity__c</fullName>
        <label>CMDBWriteSecurity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CMDB_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CMDB_Class</label>
        <referenceTo>BMCServiceDesk__CMDB_Class__c</referenceTo>
        <relationshipLabel>BMC_BaseElements</relationshipLabel>
        <relationshipName>BMC_BaseElements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Capabilities__c</fullName>
        <label>Capabilities</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CapabilityList__c</fullName>
        <label>Capability List</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Capacity__c</fullName>
        <label>Capacity</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Card_Type__c</fullName>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Base Board</fullName>
                </value>
                <value>
                    <fullName>Video Card</fullName>
                </value>
                <value>
                    <fullName>Sound Card</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Carrier__c</fullName>
        <description>Stores the mobile network operator that provides wireless communication services.</description>
        <label>Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Airtel</fullName>
                </value>
                <value>
                    <fullName>America Movil</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T</fullName>
                </value>
                <value>
                    <fullName>China Mobile</fullName>
                </value>
                <value>
                    <fullName>China Telecom</fullName>
                </value>
                <value>
                    <fullName>China Unicom</fullName>
                </value>
                <value>
                    <fullName>Cricket Wireless</fullName>
                </value>
                <value>
                    <fullName>Deutsche Telekom</fullName>
                </value>
                <value>
                    <fullName>MTN</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>SoftBank</fullName>
                </value>
                <value>
                    <fullName>Sprint</fullName>
                </value>
                <value>
                    <fullName>Telefonica</fullName>
                </value>
                <value>
                    <fullName>Telenor</fullName>
                </value>
                <value>
                    <fullName>T-Mobile</fullName>
                </value>
                <value>
                    <fullName>Verizon</fullName>
                </value>
                <value>
                    <fullName>VimpelCom</fullName>
                </value>
                <value>
                    <fullName>Vodafone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Category_Name__c</fullName>
        <label>Category Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Category__c</fullName>
        <label>Category</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ChassisBootupState__c</fullName>
        <label>Chassis Bootup State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Safe</fullName>
                    <default>true</default>
                    <label>Safe</label>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Non-recoverable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Chassis_Type__c</fullName>
        <label>Chassis Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Low-profile desktop</fullName>
                </value>
                <value>
                    <fullName>Pizza box</fullName>
                </value>
                <value>
                    <fullName>Mini tower</fullName>
                </value>
                <value>
                    <fullName>Tower</fullName>
                </value>
                <value>
                    <fullName>Portable</fullName>
                </value>
                <value>
                    <fullName>Laptop</fullName>
                </value>
                <value>
                    <fullName>Notebook</fullName>
                </value>
                <value>
                    <fullName>Hand-held</fullName>
                </value>
                <value>
                    <fullName>Docking Station</fullName>
                </value>
                <value>
                    <fullName>All-in-one</fullName>
                </value>
                <value>
                    <fullName>Subnotebook</fullName>
                </value>
                <value>
                    <fullName>Space-saving</fullName>
                </value>
                <value>
                    <fullName>Lunch box</fullName>
                </value>
                <value>
                    <fullName>Main system Chassis</fullName>
                </value>
                <value>
                    <fullName>Expansion Chassis</fullName>
                </value>
                <value>
                    <fullName>Subchassis</fullName>
                </value>
                <value>
                    <fullName>Bus-expansion Chassis</fullName>
                </value>
                <value>
                    <fullName>Peripheral Chassis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__City__c</fullName>
        <label>City</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ClassID__c</fullName>
        <formula>BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__ClassID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is automatically set to the ID of the class whose instance is being created.</inlineHelpText>
        <label>Class ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ClassName__c</fullName>
        <formula>BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__Class__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is automatically set to the name of the class whose instance is being created.</inlineHelpText>
        <label>Class Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Class__c</fullName>
        <formula>BMCServiceDesk__CMDB_Class__r.BMCServiceDesk__ClassName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ClientSiteName__c</fullName>
        <label>Client Site Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ClusterType__c</fullName>
        <label>Cluster Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Software Cluster</fullName>
                    <default>true</default>
                    <label>Software Cluster</label>
                </value>
                <value>
                    <fullName>Hardware Cluster</fullName>
                </value>
                <value>
                    <fullName>SoftwareServerCluster</fullName>
                </value>
                <value>
                    <fullName>ApplicationInstanceCluster</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CommonName__c</fullName>
        <label>Common Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CompressionMethod__c</fullName>
        <label>Compression Method</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Confidentiality__c</fullName>
        <label>Confidentiality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ConfigurationBasicNumber__c</fullName>
        <label>Configuration Basic Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ConfigurationOptions__c</fullName>
        <label>Configuration Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Connection_Type__c</fullName>
        <label>Connection Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ConnectivityCollectionType__c</fullName>
        <label>Connectivity Collection Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>ConnectivitySegment</fullName>
                </value>
                <value>
                    <fullName>IPConnectivitySubnet</fullName>
                </value>
                <value>
                    <fullName>IPXConnectivityNetwork</fullName>
                </value>
                <value>
                    <fullName>LAN</fullName>
                </value>
                <value>
                    <fullName>WAN</fullName>
                </value>
                <value>
                    <fullName>FCConnectivitySegment</fullName>
                </value>
                <value>
                    <fullName>SystemCollection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ConnectivityStatus__c</fullName>
        <label>Connectivity Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Connectivity/Up</fullName>
                </value>
                <value>
                    <fullName>No Connectivity/Down</fullName>
                </value>
                <value>
                    <fullName>Partitioned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ConnectivityType__c</fullName>
        <label>Connectivity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Ethernet</fullName>
                </value>
                <value>
                    <fullName>TokenRing</fullName>
                </value>
                <value>
                    <fullName>FDDI</fullName>
                </value>
                <value>
                    <fullName>FC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ContractID__c</fullName>
        <label>Contract ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>